# fitshub

./: .env.docker.example  .env.docker.production.example  .env.local.example  .env.vagrant.example  .pre-commit-config.yaml  README.md  app.log.1  app.log.2  pyproject.toml  requirements.txt  run.py
.github/ISSUE_TEMPLATE/: documentation.yml
.github/workflows/: CD_dockerhub.yml  CD_render.yml  CI_codacy.yml  CI_commits.yml  CI_lint.yml  CI_pytest.yml  CI_release.yml  telegram_notifications.yml
app/: __init__.py
app/services/: upload_service.py
app/templates/: 400.html  401.html  404.html  500.html  base_template.html
core/blueprints/: base_blueprint.py
core/bootstraps/: locustfile_bootstrap.py
core/configuration/: configuration.py
core/managers/: config_manager.py  module_manager.py
core/resources/: generic_resource.py
core/seeders/: BaseSeeder.py
core/selenium/: common.py
core/services/: BaseService.py
docker/: docker-compose.dev.yml
docker/entrypoints/: development_entrypoint.sh
docker/images/: Dockerfile.locust
docker/tests/: conftest.py  test_mailhog_compose.py
hooks/: pre-push
migrations/versions/: 001.py  4370ecc8e5b2_create_fakenodo_module.py  5b3ce78d8924_.py  6b66eefd6c7f_add_role_column_to_user_model.py  8d8bbb8b17bf_add_enabled_two_factor_to_userprofile.py  9ad3d3f5360b_new_data_and_dwl_count.py  a8b3fa9ca008_add_token_to_user.py  bd21f1455171_add_download_counter_to_dataset.py  ed77c875245d_create_community_model.py  (+2 more)
vagrant/: 00_main.yml  05_mailhog.yml  08_elasticsearch.yml  Vagrantfile  mailhog_arm.yml  mailhog_x86.yml
(+115 files in other folders)
