[build-system]
requires = ["setuptools>=80.3.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosemary"
version = "1.0.0"
description = "Rosemary is a CLI to be able to work on UVLHub development more easily."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "python-dotenv"
    ]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "autoflake"
    ]

[project.scripts]
rosemary = "rosemary.cli:cli"

[tool.setuptools]
packages = ["rosemary"]

# --------------------
# Formatting & linting
# --------------------

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["fitshub"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
